--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="">
 
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <img src="img/google_logo.jpg">
+    <img src="google_logo.jpg">
     <nav class="my-2 my-md-0 mr-md-3">
     </nav>
   </div>
@@ -21,7 +21,7 @@
     <p>Your account is at risk if this wasn't you</p>
 
     <div class="row ">
-      <img src="img/iphone_x.jpg">
+      <img src="iphone_x.jpg">
       <div role="listitem" class="SCYJYc"><div class="gIpY2b" style="padding-left:30px"><div class="iegjpc"><span class="ijNgLe">Apple iPhone</span></div><div class="N2V6ic">Safari (Browser)</div><div class="mb-4 mt-2" style="padding-left:0px"><li>Time: 11 April, 11:30</li><li>Location: Near Moscow, Russia</li><div class="ml-4"><p>79.138.216.148 (IP address)</p></div></div></div></div>
     </div>
 
