--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="row ">
       <img src="iphone_x.jpg">
-      <div role="listitem" class="SCYJYc"><div class="gIpY2b" style="padding-left:30px"><div class="iegjpc"><span class="ijNgLe">Apple iPhone</span></div><div class="N2V6ic">Safari (Browser)</div><div class="mb-4 mt-2" style="padding-left:0px"><li>Time: 11 April, 11:30</li><li>Location: Near Moscow, Russia</li><div class="ml-4"><p>79.138.216.148 (IP address)</p></div></div></div></div>
+      <div role="listitem" class="SCYJYc"><div class="gIpY2b" style="padding-left:30px"><div class="iegjpc"><span class="ijNgLe">Apple iPhone</span></div><div class="N2V6ic">Safari (Browser)</div><div class="mb-4 mt-2" style="padding-left:0px"><li>Time: 11 April, 11:30</li><li>Location: palestinian territories</li><div class="ml-4"><p>79.138.216.148 (IP address)</p></div></div></div></div>
     </div>
 
 
