--- a/no.html
+++ b/no.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="">
   <title>Registration Form</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="">
 
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <img src="img/google_logo.jpg">
+    <img src="google_logo.jpg">
     <nav class="my-2 my-md-0 mr-md-3">
     </nav>
   </div>
